[workspace]
members = [
    "crates/dot",
    "crates/dot_db",
    "crates/dot_dsl",
    "crates/dot_ops",
    "crates/dot_rt",
    "crates/dot_sec",
    "crates/dot_vm",
]
resolver = "3"

[workspace.package]
version = "26.1.0-alpha"
edition = "2024"
rust-version = "1.93"
license = "GPL-3.0-or-later OR LicenseRef-Dotlanth-Commercial"

[workspace.lints.rust]
unsafe_code = "forbid"
